# TheseLittleMermaids

./: .gitignore  Makefile.common  README.md  bookscreen.cpp  bookscreen.h  gamescreen.cpp  main.cpp  storyscreen.cpp
assets/game/: BOOK.def  BOOK.snd  GAME.air  GAME.sff  GAME.snd  INTRO.air  INTRO.def  INTRO.sff  OUTRO.air  OUTRO.def  OUTRO.sff
cmake/: CMakeLists.txt
vita/: CmakeLists.txt
windows/: Mermaids.code-workspace  Mermaids.sln  Mermaids.vcxproj  Mermaids.vcxproj.filters  MermaidsAll.sln  MermaidsDreamcast.sln  MermaidsDreamcast.vcxproj  MermaidsVita.sln  MermaidsVita.vcxproj  MermaidsWeb.sln  MermaidsWeb.vcxproj  resource.h
